examples/bad/IfNoThen.pas
PROGRAM IfNoThen;

BEGIN

	IF 2 * 3 / 6 < 5 + 7 BEGIN
		writeln('Math is not broken!');
	END
END.
